--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
-  <!-- <meta http-equiv="refresh" content="1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta http-equiv="refresh" content="1"> -->
     <!-- Font Awesome CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
     <title>Flowers Web</title>
     <link rel="stylesheet" href="css/style.css" />
@@ -18,21 +21,40 @@
     />
   </head>
   <body>
-    <header class=" header_section container inter_font">
+    <header class="header_section  container inter_font">
       <nav class="nav">
-          <div>
-               <img src="./assets/logo.png" alt="">
-          </div>
-          <ul class="nav_ul">
+        <div>
+          <img src="./assets/logo.png" alt="" />
+        </div>
+        <ul class="nav_ul">
           <li><a class="home" href="">Home</a></li>
           <li><a class="shop" href="">Shop</a></li>
           <li><a class="about" href="">About us</a></li>
-          <li><a class="cart" href=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a></li>
-      </ul>
-     </nav>
+          <li>
+            <a class="cart" href=""
+              ><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-      
+      <section>
+        <div class="banner_container noto_font container">
+          <div class="banner_left">
+            <h1 class="baner_title">ALWAYS <span class="banner_color">FRESH FLOWERS</span></h1>
+            <p class="com_p">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh flowers that are perfect for any occasion.
+            </p>
+          </div>
+          <div class="baner_right">
+            <img src="./assets/hero-flower.png" alt="" />
+          </div>
+        </div>
+      </section>
+     
     </main>
   </body>
 </html>
