added latest deal section with title and subtitle and card layout

--- a/index.html
+++ b/index.html
@@ -149,7 +149,41 @@
       </section>
 
 
-      
+      <section class="latest_section container">
+
+          <div class="plants_container">
+          <h2 class="plants_title">
+            <span class="banner_color">Latest</span> Deals
+          </h2>
+          <p class="com_p plants_description">
+            Indulge your senses with the beauty and fragrance of our fresh flower
+            shop. From classic roses to exotic blooms, we offer a wide variety of
+            fresh.
+          </p>
+
+        </div>
+        <div class="latest_img_container">
+
+
+          <div class="left_img">
+           <div class="left_top_img">
+            <h3  class="left_title">60% Off | Bloom Plant</h3>
+           <a class="left_a" href="">Shop Now</a>
+           </div>
+           <div class="left_bottom_img">
+            <h3 class="left_title">60% Off | Bloom Plant</h3>
+           <a class="left_a" href="">Shop Now</a>
+           </div>
+
+          </div>
+          <div class="right_img">
+            <div class="right_mid">
+              <h2 class="right_title">30% Off | Ana  Plant</h2>
+            <a class="right_a" href="">Shop Now</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
