added join section with centered title and background image in the full section and input box with button

--- a/index.html
+++ b/index.html
@@ -147,8 +147,6 @@
           </div>
         </div>
       </section>
-
-
       <section class="latest_section container">
 
           <div class="plants_container">
@@ -184,6 +182,18 @@
           </div>
         </div>
       </section>
+
+      <section class="join_section ">
+        <div class="join_container">
+          <h1 class="join_title">Join the colorful Bunch</h1>
+          <div class="input">
+            <input type="email " placeholder="Your email">
+            <button class="subscribe">Subscribe</button>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
   </body>
 </html>
