added footer section with logo on the left side and adde other links

--- a/index.html
+++ b/index.html
@@ -193,7 +193,41 @@
         </div>
       </section>
 
-      
+      <section class="container">
+        <div class="footer_container">
+
+
+          <div class="footer_first">
+              <img src="./assets/logo.png" alt="">
+              <p class="com_p footer_p">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+          </div>
+          <div class="second">
+            <ul class="footer_ul">
+              <li><a class="footer_a" href="">Home</a></li>
+              <li><a class="footer_a" href=""> About Us</a></li>
+              <li><a class="footer_a" href=""> Blog</a></li>
+              <li><a class="footer_a" href="">FAQ</a></li>
+              <li><a class="footer_a" href="">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="third">
+             <ul class="footer_ul">
+              <li><a class="footer_a" href="">Features</a></li>
+              <li><a class="footer_a"  href=""> Pricing</a></li>
+              <li><a class="footer_a" href="">Privacy Policy</a></li>
+              <li><a class="footer_a" href="">Terms of Service</a></li>
+              <li><a class="footer_a" href="">Help Center</a></li>
+            </ul>
+          </div>
+          <div class="fourth">
+            <a href=""><img src="./assets/icon-linkedin.png" alt=""></a>
+            <a href=""><img src="./assets/icon-twitter.png" alt=""></a>
+            <a href=""><img src="./assets/icon-facebook.png" alt=""></a>
+            <a href=""><img src="./assets/icon-youtube.png" alt=""></a>
+            
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
